frontend/src/app/components/Navbar/Navbar.module.css
@font-face {
    font-family: "Cormorant"; /* Provide a name for the font */
    src: url("/fonts/Cormorant-Light.ttf");
}

.pageTitle {
    background-color: #9a6345;
    font-family: "Cormorant"; /* Provide a name for the font */
    color: #fffbed;
    text-align: center;
    margin: 0;
    padding: 4px 0 6px 0;
}

.navbar {
    display: grid;
    grid-template-columns: 2fr 5fr 2fr; /* Left - Middle - Right */
    align-items: center; /* Vertically center the items */
    position: sticky;
    background-color: #fffbed;
    border-bottom: 3px solid black;
    top: 0px;
    z-index: 999;
}

.navItems {
    display: flex;
    align-items: center;

    position: relative;
}

.navGroup {
    display: flex;
    align-items: center;
    gap: 18px;
}

